fix: undo button is hidden on mobile

--- a/client/src/components/utilities/TaskList/TaskList.module.scss
+++ b/client/src/components/utilities/TaskList/TaskList.module.scss
@@ -8,6 +8,7 @@
   width: calc(22.15em + 20px);
   min-width: calc(22.15em + 20px);
   padding-top: 0.5em;
+  gap: 0;
 }
 
 .leftSide {
